<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            style="@style/NameFont"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="?android:attr/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_emailContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:hint="@string/e_mail"
            android:textColorHint="#A7A7A7"
            app:boxStrokeColor="#EAEAEE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_header">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/RegisterEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:focusable="true"
                android:drawableStart="@drawable/custom_email_icon"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@id/RegisterFirstName"
                android:textStyle="bold"
                app:boxStrokeColor="#EAEAEE" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/first_name"
            android:textColorHint="#A7A7A7"
            app:boxStrokeColor="#EAEAEE"
            android:drawableStart="@drawable/custom_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_header">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/RegisterFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:focusable="true"
                android:drawableStart="@drawable/custom_name"
                android:inputType="text"
                android:nextFocusDown="@id/RegisterLastName"
                android:textStyle="bold"
                app:boxStrokeColor="#EAEAEE" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:textColorHint="#A7A7A7"
            app:boxStrokeColor="#EAEAEE"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/custom_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_header">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/RegisterLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:focusable="true"
                android:drawableStart="@drawable/custom_name"
                android:inputType="text"
                android:nextFocusDown="@id/RegisterPassword"
                android:textStyle="bold"
                app:boxStrokeColor="#EAEAEE" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_passwordContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:drawableStart="@drawable/custom_password_icon"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="#A7A7A7"
            app:boxStrokeColor="#EAEAEE"
            app:endIconMode="password_toggle"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_emailContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/RegisterPassword"
                android:drawableStart="@drawable/custom_password_icon"
                android:drawablePadding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:focusable="true"
                android:textStyle="bold"
                app:boxStrokeColor="#EAEAEE" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/Role"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register" />

    </LinearLayout>
</ScrollView>